--- a/client/src/components/Input/Input.css
+++ b/client/src/components/Input/Input.css
@@ -9,7 +9,7 @@
 }
 
 .input:hover {
-  box-shadow: 0 2px 4px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  box-shadow: 0 2px 4px rgba(170, 168, 168, 0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .label {
