--- a/client/src/components/ModalForm/ModalForm.css
+++ b/client/src/components/ModalForm/ModalForm.css
@@ -1,32 +1,30 @@
-/* Estilo general del modal */
+
 .modal {
-    position: fixed; /* Posicionamiento fijo en toda la pantalla */
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100%; /* Ocupa toda la pantalla en ancho */
-    height: 100%; /* Ocupa toda la pantalla en altura */
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparente para efecto de oscurecimiento */
-    display: flex; /* Usamos flexbox para centrar el contenido */
-    justify-content: center; /* Centrado horizontal */
-    align-items: center; /* Centrado vertical */
-    z-index: 1000; /* Asegura que el modal esté sobre otros elementos */
+    width: 100%;
+    height: 100%; 
+    background-color: rgba(0, 0, 0, 0.5); 
+    display: flex; 
+    justify-content: center;
+    align-items: center; 
+    z-index: 1000; 
   }
-  
-  /* Contenido del modal */
+
   .modal-content {
-    background-color: #fff; /* Fondo blanco para el contenido */
-    padding: 20px; /* Espacio interior para no tocar los bordes */
-    border-radius: 8px; /* Bordes redondeados */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra sutil para el modal */
-    width: 90%; /* Ajuste de ancho con un máximo de 500px */
+    background-color: #fff;
+    padding: 20px; 
+    border-radius: 8px; 
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 90%; 
     max-width: 500px;
   }
-  
-  /* Botón para cerrar el modal */
+
   .close-button {
-    float: right; /* Alineado a la derecha */
-    font-size: 1.5rem; /* Tamaño grande para fácil clic */
-    cursor: pointer; /* Cursor tipo pointer para indicar clic */
+    float: right; 
+    font-size: 1.5rem; 
+    cursor: pointer; 
   }
   
  
