--- a/client/src/components/Post/Post.css
+++ b/client/src/components/Post/Post.css
@@ -23,7 +23,7 @@
 }
 
 .score {
-  background: black;
+  background: rgb(165, 148, 148);
   display: inline-block;
   padding: 10px 20px;
   margin: 0 10px;
@@ -39,5 +39,5 @@
 }
 
 .post-image:hover {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px rgba(104, 102, 102, 0.5);
 }
