--- a/client/src/components/PostAdmin/PostAdmin.css
+++ b/client/src/components/PostAdmin/PostAdmin.css
@@ -1,6 +1,6 @@
 .post {
     background: rgb(73, 235, 28);
-    color: rgba(40, 55, 71);
+    color: rgb(77, 149, 225);
     font-family: sans-serif;
     text-align: center;
     border-radius: 20px;
@@ -23,7 +23,7 @@
   }
   
   .score {
-    background: black;
+    background: rgb(18, 18, 18);
     display: inline-block;
     padding: 10px 20px;
     margin: 0 10px;
@@ -39,6 +39,6 @@
   }
   
   .post-image:hover {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 10px rgba(66, 58, 58, 0.5);
   }
   
